# neoneo

./: .gitignore  CMakeLists.txt  README.md  debug.sh
include/: ollama_client.hpp
src/: main.cpp  ollama_client.cpp
src/config/: config.cpp
src/terminal/: terminal.cpp
src/tools/: bash_tool.cpp  calculator_tool.cpp  file_tools.cpp  model_list_tool.cpp  shell_tool.cpp  tools_base.cpp
